<resources>
    <string name="app_name" translatable="false">IrelandGuide</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_city">Cities</string>
    <string name="menu_general">General</string>
    <string name="menu_news">News</string>
    <string name="menu_sights">Sights</string>
    <string name="menu_setings">Settings</string>
    <string name="language">Choose a language</string>
    <string name="cache">Do you want to cahce news?</string>
    <string name="pictures">Choose a number of city pictures</string>
    <string name="lan">English/Serbian</string>
    <string name="sl1">One picture</string>
    <string name="sl2">Two pictures</string>
    <string name="sl3">Tree pictures</string>
    <string name="wlc">Welcome to the geographic guide through Ireland </string>
    <string name="general1">    Ireland, also known as the Republic of Ireland (Poblacht na hÉireann), is a country in north-western Europe consisting of 26 of the 32 counties of the island of Ireland. The capital and largest city is Dublin, on the eastern side of the island. Around 2.1 million of the country\'s population of 5.13 million people resides in the Greater Dublin Area.</string>
    <string name="general2">The sovereign state shares its only land border with Northern Ireland, which is part of the United Kingdom. It is otherwise surrounded by the Atlantic Ocean, with the Celtic Sea to the south, St George\'s Channel to the south-east, and the Irish Sea to the east. It is a unitary, parliamentary republic. </string>
    <string name="general4">    The Irish Free State was created, with Dominion status, in 1922 following the Anglo-Irish Treaty. In 1937, a new constitution was adopted, in which the state was named "Ireland" and effectively became a republic, with an elected non-executive president. It was officially declared a republic in 1949, following the Republic of Ireland Act 1948. Ireland became a member of the United Nations in December 1955. It joined the European Communities (EC), the predecessor of the European Union, in 1973. The state had no formal relations with Northern Ireland for most of the twentieth century, but during the 1980s and 1990s the British and Irish governments worked with the Northern Ireland parties towards a resolution to "the Troubles". Since the signing of the Good Friday Agreement in 1998, the Irish government and Northern Ireland Executive have co-operated on a number of policy areas under the North/South Ministerial Council created by the Agreement.</string>
    <string name="general5">    One of Europe\'s major financial hubs is centred on Dublin. Ireland ranks among the top ten wealthiest countries in the world in terms of GDP per capita, although this has been partially ascribed to distortions caused by the tax inversion practices of various multinationals operating in Ireland. From 2017, a modified gross national income (GNI*) was enacted by the Central Bank of Ireland, as the standard deviation was considered too materially distorted to accurately measure or represent the Irish economy. After joining the EC, the country\'s government enacted a series of liberal economic policies that resulted in economic growth between 1995 and 2007 now known as the Celtic Tiger period, before its subsequent reversal during the Great Recession. </string>
    <string name="general6">    Gaelic Ireland had emerged by the 1st century AD. The island was Christianised from the 5th century onwards. Following the 12th century Anglo-Norman invasion, England claimed sovereignty. However, English rule did not extend over the whole island until the 16th–17th century Tudor conquest, which led to colonisation by settlers from Britain. In the 1690s, a system of Protestant English rule was designed to materially disadvantage the Catholic majority and Protestant dissenters, and was extended during the 18th century. With the Acts of Union in 1801, Ireland became a part of the United Kingdom.</string>
    <string name="general7">    The geography of Ireland comprises relatively low-lying mountains surrounding a central plain, with several navigable rivers extending inland. Its lush vegetation is a product of its mild but changeable climate which is free of extremes in temperature. Much of Ireland was woodland until the end of the Middle Ages. Today, woodland makes up about 10% of the island, compared with a European average of over 33%, with most of it being non-native conifer plantations. The Irish climate is influenced by the Atlantic Ocean and thus very moderate,[12] and winters are milder than expected for such a northerly area, although summers are cooler than those in continental Europe. Rainfall and cloud cover are abundant.</string>
    <string name="gen_img1">Map of Ireland</string>
    <string name="gen_img2">Uragh Stone Circle</string>
    <string name="gen_img3">Irish museum of modern art</string>
    <string name="gen_img4">Map of Dublin</string>
    <string name="gen_img5">Dublin</string>
    <string name="title_activity_city" translatable="false">SightActivity</string>
    <string name="title_activity_sight2"></string>
    <string name="temp">Temperature:</string>
    <string name="maxTemp_minTemp">Max and min temp:</string>
    <string name="wind">Wind speed:</string>
    <string name="humidity">Humidity:</string>
    <string name="prognozaFail" translatable="false">xx</string>

    <!-- Strings used for fragments for navigation -->

</resources>