<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_general"
            android:icon="@drawable/ic_action_general"
            android:title="@string/menu_general" />
        <item
            android:id="@+id/nav_sights"
            android:icon="@drawable/ic_action_sights"
            android:title="@string/menu_sights" />
        <item
            android:id="@+id/nav_city"
            android:icon="@drawable/ic_action_city"
            android:title="@string/menu_city" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_action_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/menu_setings" />
    </group>
</menu>