<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mymobapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_general"
        android:name="com.example.mymobapp.ui.general.GeneralFragment"
        android:label="@string/menu_general"
        tools:layout="@layout/fragment_general" />

    <fragment
        android:id="@+id/nav_sights"
        android:name="com.example.mymobapp.ui.sights.SightsFragment"
        android:label="@string/menu_sights"
        tools:layout="@layout/fragment_sights" />

    <fragment
        android:id="@+id/nav_city"
        android:name="com.example.mymobapp.ui.city.CityFragment"
        android:label="@string/menu_city"
        tools:layout="@layout/fragment_sights" />
    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.mymobapp.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.mymobapp.ui.settings.SettingsFragment"
        android:label="@string/menu_setings"
        tools:layout="@layout/fragment_settings" />
</navigation>