<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.general.GeneralFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:id="@+id/divider9"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/zastava" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general1" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general2" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general7" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/map2" />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general6" />

            <View
                android:id="@+id/divider11"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/celt" />

            <View
                android:id="@+id/divider10"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general4" />

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/museum" />

            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general5" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/dblmapp" />

            <View
                android:id="@+id/divider12"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/dablin" />

            <View
                android:id="@+id/divider13"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/white" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>